# webplane

./: .editorconfig  .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: docs-deploy.yaml
application-directory/: index.html
docs/: application-directory.md  index.md
docs/css/: extra.css
docs/the-basics/: static-files.md
search/: search_index.json
the-basics/controllers/: index.html
the-basics/static-files/: index.html
the-basics/templates/: index.html
webplane/: LAYOUT.md  __main__.py  application.py  version.py
webplane/commands/: create.py  run.py
webplane/controllers/: web_template.py
webplane/features/: boot.py  lib.py  web.py
webplane/starter_app_template/boot/: hello.py
