[metadata]
name = webplane
description = HTTP Application Server
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/webplane/webplane
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
   quickweb = webplane.__main__:main

# pyproject.toml
[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]
